--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,8 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.FlightSearch" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.FlightSearch" parent="Theme.Material3.Dark.NoActionBar">
+<!--        <item name="android:background">@color/black</item>-->
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="bottomNavigationStyle">@color/black</item>
     </style>
-
-    <style name="Theme.FlightSearch" parent="Base.Theme.FlightSearch" />
 </resources>
