--- a/feature/flightsearch/src/main/res/layout/fragment_offers.xml
+++ b/feature/flightsearch/src/main/res/layout/fragment_offers.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
+    android:background="@color/black"
     tools:context=".fragments.OffersFragment">
 
     <TextView
