--- a/feature/flightsearch/src/main/res/navigation/flight_search_nav_graph.xml
+++ b/feature/flightsearch/src/main/res/navigation/flight_search_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/flight_search_nav_graph"
-    app:startDestination="@id/ticketsFragment">
+    app:startDestination="@id/offersFragment">
 
 
     <fragment
@@ -11,23 +11,36 @@
         android:name="com.example.flightsearch.fragments.OffersFragment"
         android:label="fragment_offers"
         tools:layout="@layout/fragment_offers">
+        <action
+            android:id="@+id/toSearchFragment"
+            app:destination="@id/searchFragment"/>
     </fragment>
 
     <dialog
         android:id="@+id/searchFragment"
         android:name="com.example.flightsearch.fragments.searchfragment.SearchFragment"
         android:label="fragment_search"
-        tools:layout="@layout/fragment_search"/>
+        tools:layout="@layout/fragment_search">
+        <action
+            android:id="@+id/toRouteDetailsFragment"
+            app:destination="@id/routeDetailsFragments"/>
+
+    </dialog>
 
     <fragment
         android:id="@+id/mockFragment"
-        android:name="com.example.flightsearch.fragments.mock_fragments.MockFragment"/>
+        android:name="com.example.flightsearch.fragments.mock_fragments.MockFragment">
+
+    </fragment>
 
     <fragment
         android:id="@+id/routeDetailsFragments"
         android:name="com.example.flightsearch.fragments.route_details_fragment.RouteDetailsFragment"
         android:label="fragment_route_details"
         tools:layout="@layout/fragment_route_details">
+        <action
+            android:id="@+id/toTicketsFragment"
+            app:destination="@id/ticketsFragment"/>
     </fragment>
 
     <fragment
@@ -35,26 +48,11 @@
         android:name="com.example.flightsearch.fragments.tickets_fragment.TicketsFragment"
         android:label="fragment_tickets_fragment"
         tools:layout="@layout/fragment_tickets">
+
     </fragment>
-
-    <action
-        android:id="@+id/toOffersFragment"
-        app:destination="@id/offersFragment" />
-
-    <action
-        android:id="@+id/toSearchFragment"
-        app:destination="@id/searchFragment"/>
 
     <action
         android:id="@+id/toMockFragment"
         app:destination="@id/mockFragment"/>
-
-    <action
-        android:id="@+id/toRouteDetailsFragment"
-        app:destination="@id/routeDetailsFragments"/>
-
-    <action
-        android:id="@+id/toTicketsFragment"
-        app:destination="@id/ticketsFragment"/>
 
 </navigation>
