--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,7 @@
 <resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.FlightSearch" parent="Theme.Material3.Dark.NoActionBar">
-<!--        <item name="android:background">@color/black</item>-->
-        <item name="android:background">@color/black</item>
+        <item name="android:backgroundTint">@color/black</item>
         <item name="bottomNavigationStyle">@color/black</item>
     </style>
 </resources>
